deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gifverse-service
  labels:
    app: gifverse
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: gifverse
